# MegaVIT

./: README.md  example.py  pyproject.toml  train.py
mega_vit/: __init__.py  main.py
